--- a/all/templates/all/search.html
+++ b/all/templates/all/search.html
@@ -59,10 +59,13 @@ $('#model_search_table [value="All_ranks"]').click(function(){
 		$('#model_search_table [name="capri_rank"]').not('[value="All_ranks"]').removeAttr('disabled');
 	};
 });
+
 $(document).ready(function(){
-	$('#model_search_table [value="All_ranks"]').prop('checked',true);
-	$('#model_search_table [name="capri_rank"]').not('[value="All_ranks"]').attr('disabled','disabled');
+	if($('#model_search_table [value="All_ranks"]').attr('checked')){
+		$('#model_search_table [name="capri_rank"]').not('[value="All_ranks"]').attr('disabled','disabled');
+	}
 });
+
 </script>
 
 
