--- a/all/templates/all/model.html
+++ b/all/templates/all/model.html
@@ -107,7 +107,7 @@ Jmol.script(jmolApplet0,"select { "+ref_int_10A_residues+" or "+inp_int_10A_resi
 if (int_res_visualisation=="ball_and_stick") {
 Jmol.script(jmolApplet0,"select {"+"{{ inp_int_5A_residues }}"+"}; wireframe 0.15; spacefill 20%; color wireframe cpk; color balls cpk;");
 } else if (int_res_visualisation=="space_fill") {
-Jmol.script(jmolApplet0,"select {"+"{{ inp_int_5A_residues }}"+"}; spacefill on; select { {{ model_rec_chains }} }; color balls "+rec_colours[1]+"; select { {{ model_lig_chains }} }; color balls "+lig_colours[1]+"; color balls TRANSLUCENT 0.7");
+Jmol.script(jmolApplet0,"select {"+"{{ inp_int_5A_residues }}"+"}; spacefill on; select { {{ model_rec_chains }} }; color balls "+rec_colours[1]+"; select { {{ model_lig_chains }} }; color balls "+lig_colours[1]+"; select all; color balls TRANSLUCENT 0.7");
 }}
 </script><br></td>
 
@@ -146,7 +146,7 @@ Change how much of the complex is visible:<br>
 </form><br>
 
 <form name="int_res_changer" onSubmit="return false">
-Change how the 5 &#8491; interface residues are viewed:<br>
+Change how the model 5 &#8491; interface residues are viewed:<br>
 <input type="radio" name="int_res_select" onClick='change_int_res("cartoon")' checked>&nbsp;View as cartoon<br>
 <input type="radio" name="int_res_select" onClick='change_int_res("ball_and_stick")'>&nbsp;View as ball and stick<br>
 <input type="radio" name="int_res_select" onClick='change_int_res("space_fill")'>&nbsp;View as space-filling spheres<br>
