--- a/all/templates/all/method.html
+++ b/all/templates/all/method.html
@@ -8,11 +8,11 @@
 
 This page gives information on the methods used to produce and score docking models.<br><br>
 
-<a href="#scoring">Skip to scoring methods</a>
+<a href="#scoring">Skip to scoring methods</a><br><br>
 
 <h2>Docking methods</h2>
 
-<table class="table">
+<br><table class="table">
 
 <tr>
 <th>Name</th>
@@ -80,11 +80,11 @@ This page gives information on the methods used to produce and score docking mod
 
 </table>
 
-<a href="#docking" id="scoring">Back to top</a>
+<a href="#docking" id="scoring">Back to top</a><br><br>
 
 <h2>Scoring methods</h2>
 
-<table class="table">
+<br><table class="table">
 
 <tr>
 <th>Name</th>
@@ -95,41 +95,41 @@ This page gives information on the methods used to produce and score docking mod
 
 <tr>
 <td>ZRANK</td>
-<td></td>
+<td>Uses detailed electrostatics, van der Waals and desolvation terms with optimised weightings.</td>
 <td>34<sup>th</sup></td>
-<td></td>
+<td><a href="http://www.ncbi.nlm.nih.gov/pubmed/17373710" target="_blank">http://www.ncbi.nlm.nih.gov/pubmed/17373710</a></td>
 </tr>
 
 <tr>
 <td>ZRANK2</td>
-<td></td>
+<td>Re-optimised ZRANK function.</td>
 <td>1<sup>st</sup></td>
-<td></td>
+<td><a href="http://www.ncbi.nlm.nih.gov/pubmed/18214977" target="_blank">http://www.ncbi.nlm.nih.gov/pubmed/18214977</a></td>
 </tr>
 
 <tr>
 <td>PISA</td>
-<td></td>
+<td>Combines coarse-grained and atomic potentials.</td>
 <td>8<sup>th</sup></td>
-<td></td>
+<td><a href="http://www.ncbi.nlm.nih.gov/pubmed/23180599" target="_blank">http://www.ncbi.nlm.nih.gov/pubmed/23180599</a></td>
 </tr>
 
 <tr>
 <td>SPIDER</td>
-<td></td>
+<td>Transforms protein-protein complexes into a residue contact network then uses a subgraph mining approach to identify common interfacial residue patterns that appear in at least a subset of native protein-protein interfaces.</td>
 <td>38<sup>th</sup></td>
-<td></td>
+<td><a href="http://www.ncbi.nlm.nih.gov/pubmed/22581643" target="_blank">http://www.ncbi.nlm.nih.gov/pubmed/22581643</a></td>
 </tr>
 
 </table>
 
-<span id="references">References:</span>
+<br><big><span id="references">References:</span></big><br><br>
 
 <ol>
-<li></li>
-<li></li>
-<li></li>
-</ol>
+<li>Lensink MF, Wodak SJ: <b>Docking, scoring, and affinity prediction in CAPRI.</b> <i>Proteins</i> 2013, <b>81</b>(12):2082-95. <a href="http://www.ncbi.nlm.nih.gov/pubmed/24115211" target="_blank">Link</a></li>
+<li>Lensink MF, Wodak SJ: <b>Docking and scoring protein interactions: CAPRI 2009.</b> <i>Proteins</i> 2010, <b>78</b>(15):3073-84. <a href="http://www.ncbi.nlm.nih.gov/pubmed/20806235" target="_blank">Link</a></li>
+<li>Moal IH, Torchala M, Bates PA, Fern&aacute;ndez-Recio J: <b>The scoring of poses in protein-protein docking: current capabilities and future directions.</b> <i>BMC Bioinformatics</i> 2013, <b>14</b>:286. <a href="http://www.ncbi.nlm.nih.gov/pubmed/24079540" target="_blank">Link</a></li>
+</ol><br>
 
 <a href="#docking">Back to top</a>&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="{% url 'search' %}">Back to search</a>
