--- a/all/templates/all/model_select.html
+++ b/all/templates/all/model_select.html
@@ -53,7 +53,7 @@
 <td class="td.target.receptor row_id_{{ model.id }}"><a target="_blank" href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target__receptor }}">{{ model.target__receptor }}</a></td>
 <td class="td.target.ligand row_id_{{ model.id }}"><a target="_blank" href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target__ligand }}">{{ model.target__ligand }}</a></td>
 <td class="td.viewmodel"><a href="{% url 'model' model.id %}" class="view_model">View model</a></td>
-<td class="td.viewallmodels" style="white-space: nowrap; overflow: hidden; text-overflow:ellipsis;"><a href="{% url 'target_models' model.target__name 'All' 'All' 0 0 0 0 1 0 %}" class="view_target">View all models for {{model.target__name}}</a></td>
+<td class="td.viewallmodels" style="white-space: nowrap; overflow: hidden; text-overflow:ellipsis;"><a href="{% url 'model_select' model.target__name 'All' 'All' 0 0 0 0 1 0 %}" class="view_models">View more models for {{model.target__name}}</a></td>
 </tr>
 {% endfor %}
 </tbody>
@@ -106,46 +106,6 @@ $('#popover')
 
 
 });
-
-/*$(document).ready(function(){
-    Downloadify.create('downloadify',{
-	swf: Django.static("downloadify/media/downloadify.swf"),
-	filename: "docking_models.csv",
-	data: function(){
-		var csv = [];
-		if(document.getElementById('downloadcsv_all').checked) {
-			var selection = $('#model_select_table').find('tbody tr');
-			var headselection = $('#model_select_table thead th');
-			var cells = 'td';
-		}
-		else if(document.getElementById('downloadcsv_onlyvisible').checked) {
-			var selection = $('#model_select_table').find('tbody tr:visible');
-			var headselection = $('#model_select_table thead th:visible');
-			var cells = 'td:visible';
-		};
-		var headrow=[];
-		headselection.each(function(){
-			headrow.push( $(this).text() );
-		});
-		csv.push( headrow.join(',') );		
-		selection.each(function(){
-			var row = [];
-			$(this).find(cells).not('.td\\.viewallmodels').not('.td\\.viewmodel').each(function(){
-				row.push( $(this).text() );
-			});
-			csv.push( row.join(',') )
-    		});
-		var csv_text=csv.join('\n');
-		return csv_text;
-	},
-	downloadImage: Django.static("downloadify/images/download.png"),
-	width: 175,
-	height: 30,
-    onError: function(){ 
-      alert('No visible cells'); 
-    },
-    });
-});*/
 
 //if model id is not in list of tooltips already created, create the tooltip
 var opentip_formatting = { target:true, style:"dark", stem:"false", tipJoint:"top left", targetJoint:"bottom left" };
