--- a/all/templates/all/target_info.html
+++ b/all/templates/all/target_info.html
@@ -13,7 +13,7 @@
 <td><span class="difficulty">{{ target.difficulty }}</span></td>
 </tr><tr>
 <td><span class="category">Category</span></td>
-<td><span class="category">{{ target.category }}</span></td>
+<td><span class="category">{{ complete_cat }}</span></td>
 </tr><tr>
 <td><span class="rec_pdb_id">Receptor PDB ID</span></td>
 <td><a href="{{ pdb_url }}{{ target.receptor }}" target="_blank" class="rec_pdb_id">{{ target.receptor }}</a></td>
