--- a/all/templates/all/target_models.html
+++ b/all/templates/all/target_models.html
@@ -2,6 +2,7 @@
 {% block content %}
 {% django_js jquery=false %}
 {% load static from staticfiles %}
+<div id="everything" style="display: none;">
 <h1>{{ target.name }} models</h1>
 
 <table class="toptable">
@@ -221,4 +222,10 @@ border-spacing:15px 10px;
 </style>
 
 <p><a href="{% url 'search' %}">Back to search</a></p>
+</div>
+<script>
+$(document).ready(function(){
+	$('#everything').show();
+});
+</script>
 {% endblock %}
