--- a/all/templates/all/model_select.html
+++ b/all/templates/all/model_select.html
@@ -3,6 +3,7 @@
 {% django_js jquery=false %}
 {% load static from staticfiles %}
 
+<div id="everything" style="display: none;">
 <h1>Model search results</h1><br>
 
 <form method="get" action="{% static "csv/all_models.tar.gz" %}"><button type="submit">Download data for all models</button>&nbsp;&nbsp;Download the complete table with all models in the database as a CSV file</form><br>
@@ -30,6 +31,11 @@
 <th data-priority="6" class="columnSelector-false th.target.complex" data-placeholder="e.g. '1BGX'">Complex PDB ID</th>
 <th data-priority="6" class="columnSelector-false th.target.receptor rec_pdb_id" data-placeholder="e.g. '1BVL'">Receptor PDB ID</th>
 <th data-priority="6" class="columnSelector-false th.target.ligand lig_pdb_id" data-placeholder="e.g. '3LZT'">Ligand PDB ID</th>
+<th data-priority="6" class="columnSelector-false" data-placeholder="e.g. '!Not scored'">ZRANK Score</th>
+<th data-priority="6" class="columnSelector-false" data-placeholder="e.g. '!Not scored'">ZRANK2 Score</th>
+<th data-priority="6" class="columnSelector-false" data-placeholder="e.g. '!Not scored'">PISA Score</th>
+<th data-priority="6" class="columnSelector-false" data-placeholder="e.g. '!Not scored'">SPIDER Score</th>
+
 </tr>
 
 </thead>
@@ -52,8 +58,12 @@
 <td class="td.target.complex row_id_{{ model.id }}"><a target="_blank" href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target__complex }}">{{ model.target__complex }}</a></td>
 <td class="td.target.receptor row_id_{{ model.id }}"><a target="_blank" href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target__receptor }}">{{ model.target__receptor }}</a></td>
 <td class="td.target.ligand row_id_{{ model.id }}"><a target="_blank" href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target__ligand }}">{{ model.target__ligand }}</a></td>
+<td class="row_id_{{ model.id }}">{{ model.zrank_score }}</td>
+<td class="row_id_{{ model.id }}">{{ model.zrank2_score }}</td>
+<td class="row_id_{{ model.id }}">{{ model.pisa_score }}</td>
+<td class="row_id_{{ model.id }}">{{ model.spider_score }}</td>
 <td class="td.viewmodel"><a href="{% url 'model' model.id %}" class="view_model">View model</a></td>
-<td class="td.viewallmodels" style="white-space: nowrap; overflow: hidden; text-overflow:ellipsis;"><a href="{% url 'target_models' model.target__name 'All' 'All' 0 0 0 0 1 0 %}" class="view_target">View all models for {{model.target__name}}</a></td>
+<td class="td.viewallmodels" style="white-space: nowrap; overflow: hidden; text-overflow:ellipsis;"><a href="{% url 'model_select' model.target__name 'All' 'All' 0 0 0 0 1 0 %}" class="view_target">View more models for {{model.target__name}}</a></td>
 </tr>
 {% endfor %}
 </tbody>
@@ -76,6 +86,7 @@
 <br>
 
 <a href="{% url 'search' %}">Back to search</a><br>
+</div>
 
 <style id="css">
 #popover-target label {
@@ -88,6 +99,7 @@
 .popover {
   margin-top: -65px; /* adjust popover position */
 }
+
 </style>
 
 <script id="js">$(function() {
@@ -106,46 +118,6 @@ $('#popover')
 
 
 });
-
-/*$(document).ready(function(){
-    Downloadify.create('downloadify',{
-	swf: Django.static("downloadify/media/downloadify.swf"),
-	filename: "docking_models.csv",
-	data: function(){
-		var csv = [];
-		if(document.getElementById('downloadcsv_all').checked) {
-			var selection = $('#model_select_table').find('tbody tr');
-			var headselection = $('#model_select_table thead th');
-			var cells = 'td';
-		}
-		else if(document.getElementById('downloadcsv_onlyvisible').checked) {
-			var selection = $('#model_select_table').find('tbody tr:visible');
-			var headselection = $('#model_select_table thead th:visible');
-			var cells = 'td:visible';
-		};
-		var headrow=[];
-		headselection.each(function(){
-			headrow.push( $(this).text() );
-		});
-		csv.push( headrow.join(',') );		
-		selection.each(function(){
-			var row = [];
-			$(this).find(cells).not('.td\\.viewallmodels').not('.td\\.viewmodel').each(function(){
-				row.push( $(this).text() );
-			});
-			csv.push( row.join(',') )
-    		});
-		var csv_text=csv.join('\n');
-		return csv_text;
-	},
-	downloadImage: Django.static("downloadify/images/download.png"),
-	width: 175,
-	height: 30,
-    onError: function(){ 
-      alert('No visible cells'); 
-    },
-    });
-});*/
 
 //if model id is not in list of tooltips already created, create the tooltip
 var opentip_formatting = { target:true, style:"dark", stem:"false", tipJoint:"top left", targetJoint:"bottom left" };
@@ -172,6 +144,9 @@ if ($.inArray(model_id, created_tooltip_list) == -1) {
 	created_tooltip_list.push(model_id);
 }
 };
+$(document).ready(function(){
+	$('#everything').show();
+});
 </script>
 
 {% endblock %}
